LPS-67914 Fix alignment issues and asset publisher content shouldn't float on small screens

--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_aspect_ratio.scss
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_aspect_ratio.scss
@@ -2,7 +2,7 @@
 	padding-bottom: 56.25%;
 
 	@include sm {
-		padding-bottom: 112.5%;
+		padding-bottom: 112.495%;
 	}
 }
 
