--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_layout.scss
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_layout.scss
@@ -4,3 +4,9 @@
 		padding-right: 0;
 	}
 }
+
+.pull-sm-right {
+	@include sm {
+		float: right !important;
+	}
+}
